--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title>{{ page.title }}</title>
+  <link href="https://fonts.googleapis.com/css?family=Glegoo" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Glegoo', serif;
+    }
+  </style>
 </head>
 <body>
     {{ content }}
