--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,14 @@
     body {
       font-family: 'Glegoo', serif;
     }
+    #content {
+      margin: auto; 
+    }
   </style>
 </head>
 <body>
+  <div id="content">
     {{ content }}
+  </div>
 </body>
 </html>
