--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,12 @@
     #content {
       margin: auto; 
     }
+    table {
+      background: #eee; 
+    }
+    tbody tr:nth-child(odd) {
+      background: #ddd;
+    }
   </style>
 </head>
 <body>
