--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       font-family: 'Glegoo', serif;
     }
     #content {
-      margin: auto; 
+      margin: 0 auto;
     }
     table {
       background: #eee; 
